[package]
description = "A pallet that maintains bridge configuration metadata."
name = "pallet-bridge-registry"
version = "1.0.0"
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
serde = { workspace = true }
hex = { workspace = true }

dkg-runtime-primitives = { workspace = true, default-features = false }
frame-benchmarking = { workspace = true, optional = true }
pallet-identity = { workspace = true }
webb-proposals = { workspace = true, default-features = false }

[dev-dependencies]
serde = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
pallet-balances = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-std/std",
    "webb-proposals/std",
    "pallet-identity/std",
    "dkg-runtime-primitives/std"
]
runtime-benchmarks = [
  "frame-benchmarking",
  "frame-system/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
]
