[package]
name = "pallet-dkg-metadata"
authors = ["Anonymous"]
description = "FRAME pallet for DKG metadata"
version = "0.1.0"
license = "Unlicense"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", features = [
	"derive",
], default-features = false }
scale-info = { version = "1.0", default-features = false, features = [
	"derive",
] }
hex = { version = "0.4", default-features = false }
libsecp256k1 = { version = "0.7.0", default-features = false }
dkg-runtime-primitives = { path = "../../dkg-runtime-primitives", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }

[dev-dependencies]
serde = { version = "1.0.119" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }
pallet-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sp-staking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking"]
std = [
	"codec/std",
	"hex/std",
	"scale-info/std",
	"sp-std/std",
	"sp-runtime/std",
	"dkg-runtime-primitives/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
	"libsecp256k1/std",
]
