[package]
name = "pallet-dkg-metadata"
description = "FRAME pallet for DKG metadata"
version = "0.1.0"
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = { workspace = true }
codec = { package = "parity-scale-codec", version = "3", features = [
	"derive",
], default-features = false }
scale-info = { workspace = true }
hex = { workspace = true, features = ["alloc"] }
libsecp256k1 = { workspace = true }
dkg-runtime-primitives = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }
sp-io = { workspace = true }
pallet-session = { workspace = true }
pallet-timestamp = { workspace = true }
webb-proposals = { workspace = true, default-features = false }

[dev-dependencies]
serde = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-staking = { workspace = true }
sp-keystore = { workspace = true }

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking"]
std = [
	"codec/std",
	"hex/std",
	"scale-info/std",
	"sp-std/std",
	"log/std",
	"sp-runtime/std",
	"dkg-runtime-primitives/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
	"libsecp256k1/std",
	"pallet-session/std"
]
