[package]
name = "pallet-dkg-mmr"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
description = "DKG + MMR runtime utilities"

[dependencies]
hex = { version = "0.4", optional = true }
codec = { version = "2.0.0", package = "parity-scale-codec", default-features = false, features = ["derive"] }
libsecp256k1 = { version = "0.6.0", default-features = false }
log = { version = "0.4.13", default-features = false }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.130", optional = true }

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
pallet-mmr = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
pallet-mmr-primitives = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
pallet-session = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }

dkg-merkle-tree = { package = "beefy-merkle-tree", git = "https://github.com/paritytech/substrate", default-features = false }
dkg-runtime-primitives = { path = "../../dkg-runtime-primitives", default-features = false }
pallet-dkg-metadata = { path = "../dkg-metadata", default-features = false }

[dev-dependencies]
sp-staking = { git = "https://github.com/paritytech/substrate", branch = "master" }
hex-literal = "0.3"

[features]
default = ["std"]
std = [
    "dkg-merkle-tree/std",
    "dkg-runtime-primitives/std",
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "hex",
    "libsecp256k1/std",
    "log/std",
    "pallet-dkg-metadata/std",
    "pallet-mmr-primitives/std",
    "pallet-mmr/std",
    "pallet-session/std",
    "serde",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
]