[package]
name = "pallet-dkg-proposal-handler"
authors = ["Anonymous"]
description = "FRAME pallet template for handling approved DKG transaction proposals"
version = "0.1.0"
license = "Unlicense"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3", features = ["derive"], default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }


dkg-runtime-primitives = { path = "../../dkg-runtime-primitives", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
pallet-dkg-metadata = { path = "../dkg-metadata", default-features = false }
hex-literal = { version = "0.3", optional = true }

webb-proposals = { version = "0.4.4", default-features = false }

[dev-dependencies]
pallet-dkg-proposals = { path = "../dkg-proposals"}
serde = { version = "1.0.119" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
pallet-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
pallet-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sp-staking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }


[features]
default = ["std"]
runtime-benchmarks = [
	"frame-benchmarking",
	"hex-literal",
	"frame-system/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
	"pallet-dkg-metadata/runtime-benchmarks"
]
std = [
	"codec/std",
	"scale-info/std",
	"sp-std/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-core/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
	"dkg-runtime-primitives/std",
	"pallet-dkg-metadata/std",
	"webb-proposals/std",
]
