[package]
name = "pallet-dkg-proposal-handler"
authors = ["Anonymous"]
description = "FRAME pallet template for handling approved DKG transaction proposals"
version = "0.1.0"
license = "Unlicense"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3", features = ["derive"], default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
log = { version = "0.4.13", default-features = false }

dkg-runtime-primitives = { path = "../../dkg-runtime-primitives", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
pallet-dkg-metadata = { default-features = false, path = "../dkg-metadata" }

webb-proposals = { version = "0.5.4", default-features = false }

[dev-dependencies]
pallet-dkg-proposals = { default-features = false, path = "../dkg-proposals"}
serde = { version = "1.0.119", default-features = false }
pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
pallet-aura = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-consensus-aura = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
pallet-session = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-staking = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }


[features]
default = ["std"]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-system/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
	"pallet-dkg-metadata/runtime-benchmarks",
]
std = [
	"codec/std",
	"scale-info/std",
	"sp-std/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-core/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
	"dkg-runtime-primitives/std",
	"sp-consensus-aura/std",
	"pallet-dkg-metadata/std",
	"webb-proposals/std",
	"log/std",
	"pallet-aura/std"
]
