[package]
name = "pallet-dkg-proposal-handler"
description = "FRAME pallet template for handling approved DKG transaction proposals"
version = "0.1.0"
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3", features = ["derive"], default-features = false }
scale-info = { workspace = true }
log = { workspace = true }

dkg-runtime-primitives = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-io = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }
sp-core = { workspace = true }
pallet-dkg-metadata = { workspace = true }

webb-proposals = { workspace = true }

[dev-dependencies]
pallet-dkg-proposals = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-aura = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-keystore = { workspace = true }
pallet-session = { workspace = true }
sp-staking = { workspace = true }
pallet-balances = { workspace = true }


[features]
default = ["std"]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-system/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
	"pallet-dkg-metadata/runtime-benchmarks",
]
std = [
	"codec/std",
	"scale-info/std",
	"sp-std/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-core/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
	"dkg-runtime-primitives/std",
	"sp-consensus-aura/std",
	"pallet-dkg-metadata/std",
	"webb-proposals/std",
	"log/std",
	"pallet-aura/std"
]
