[package]
authors = ["Webb Technologies Inc."]
description = "FRAME pallet for proposing and reporting signed transaction blobs."
edition = "2021"
homepage = "https://substrate.dev"
license = "Unlicense"
name = "pallet-dkg-proposals"
repository = "https://github.com/substrate-developer-hub/substrate-darkwebb-node/"
version = "1.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# primitives
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
k256 = { version = "0.11.5", default-features = false, features = ["arithmetic", "ecdsa"] }
log = { version = "0.4.13", default-features = false }

dkg-runtime-primitives = { path = '../../dkg-runtime-primitives', default-features = false }

sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }

# frame dependencies
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36", optional = true }

[dev-dependencies]
webb-proposals = { version = "0.5.4", default-features = false, features = ["scale", "evm", "substrate"] }
pallet-dkg-proposal-handler = { default-features = false, path = "../dkg-proposal-handler" }
pallet-dkg-metadata = { default-features = false, path = "../dkg-metadata" }
pallet-collator-selection = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "release-v0.9.360" }
pallet-aura = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-consensus-aura = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
pallet-session = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
hex = { version = "0.4", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"k256/std",
	"log/std",
	"scale-info/std",
	"sp-std/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-core/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
	"sp-consensus-aura/std",
	"pallet-balances/std",
	"dkg-runtime-primitives/std",
	"pallet-collator-selection/std"
]
runtime-benchmarks = [
  "frame-benchmarking",
  "frame-system/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
]
