[package]
description = "FRAME pallet for proposing and reporting signed transaction blobs."
name = "pallet-dkg-proposals"
version = "1.0.0"
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# primitives
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { workspace = true }
k256 = { version = "0.11.5", default-features = false, features = ["arithmetic", "ecdsa"] }
log = { workspace = true }

dkg-runtime-primitives = { workspace = true, default-features = false, optional = true }

sp-std = { workspace = true }
sp-runtime = { workspace = true }
sp-io = { workspace = true }
sp-core = { workspace = true }

# frame dependencies
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-balances = { workspace = true }
pallet-timestamp = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }

[dev-dependencies]
webb-proposals = { workspace = true }
pallet-dkg-proposal-handler = { workspace = true }
pallet-dkg-metadata = { workspace = true }
pallet-collator-selection = { workspace = true }
pallet-aura = { workspace = true }
pallet-timestamp = { workspace = true }
sp-consensus-aura = { workspace = true }
pallet-session = { workspace = true }
hex = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"k256/std",
	"log/std",
	"scale-info/std",
	"sp-std/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-core/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
	"sp-consensus-aura/std",
	"pallet-balances/std",
	"dkg-runtime-primitives/std",
	"pallet-collator-selection/std"
]
runtime-benchmarks = [
  "frame-benchmarking",
  "frame-system/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
]
