[package]
name = "pallet-parachain-staking"
version = "1.0.0"
authors = ["PureStake"]
edition = "2018"
license = "GNU GPL 3.0"
description = "parachain staking pallet for collator selection and reward distribution"

[dependencies]
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.11", default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.11", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.11", default-features = false }
log = {version = "0.4.14", default-features = false}
parity-scale-codec = { version = "2.3.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.11", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.11", default-features = false }
sp-staking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.11", default-features = false }
pallet-authorship = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.11", default-features = false }
substrate-fixed = { default-features = false, git = "https://github.com/encointer/substrate-fixed" }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
pallet-session = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.11", default-features = false}

[dev-dependencies]
pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.11"}
pallet-aura = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.11"}
pallet-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.11"}
sp-consensus-aura = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.11"}
similar-asserts = "1.1.0"
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.11" }
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.11" }

[features]
default = ["std"]
std = [
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"parity-scale-codec/std",
	"serde",
	"log/std",
	"sp-runtime/std",
	"sp-std/std",
	"scale-info/std",
	"pallet-authorship/std",
	"pallet-session/std",
	"sp-staking/std",
]
runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]